--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      # The given ref should belong to the master branch.
-      # If it starts with 'v', it should be a tag, belong to the master branch and match the semver regex.
+      # The given ref should belong to the main branch.
+      # If it starts with 'v', it should be a tag, belong to the main branch and match the semver regex.
       # Anything else is invalid.
       - name: Validate ref
         run: |
@@ -32,9 +32,9 @@ jobs:
 
           [[ $ref =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]] &&
           [ $(git tag --points-at $sha | grep -E "^$ref\$" | wc -l) -eq 1 ] &&
-          [ $(git branch --contains=$sha master | wc -l) -eq 1 ]
+          [ $(git branch --contains=$sha main | wc -l) -eq 1 ]
           if [ $? -ne 0 ]; then
-            echo "::error ::Invalid ref $ref $sha: must be a tag, belong to the master branch and match the semver regex"
+            echo "::error ::Invalid ref $ref $sha: must be a tag, belong to the main branch and match the semver regex"
             exit 1
           fi
   release:
