--- a/.github/workflows/test_validation_script.yml
+++ b/.github/workflows/test_validation_script.yml
@@ -39,13 +39,13 @@ jobs:
               # Check if it's a valid tag format
               if [[ ! \$ref =~ ^v[0-9]+\.[0-9]+\.[0-9]+(-[0-9]+)?\$ ]]; then
                 echo "::error::Invalid tag format: \$ref"
-                exit 1
+                return 1
               fi
           
               # Check if the tag points to the current SHA
               if [ \$(git tag --points-at \$sha | grep -E "^\$ref\$" | wc -l) -ne 1 ]; then
                 echo "::error::Tag \$ref does not point to the current SHA \$sha"
-                exit 1
+                return 1
               fi
           
               # Fetch all branches to ensure we have the necessary information
@@ -56,10 +56,11 @@ jobs:
                 echo "::error::\$sha is not in main or any patch branch"
                 echo "Branches containing this SHA:"
                 git branch -r --contains=\$sha
-                exit 1
+                return 1
               fi
           
               echo "Validation successful"
+              return 0
           }
           
           # Test cases
@@ -70,7 +71,10 @@ jobs:
               git commit -am "Test commit for valid tag"
               git tag v1.2.3 HEAD
               set_github_env "v1.2.3" \$(git rev-parse HEAD)
-              run_script
+              if ! run_script; then
+                  echo "Test 'valid tag' failed"
+                  return 1
+              fi
           }
           
           test_invalid_tag_format() {
@@ -79,7 +83,10 @@ jobs:
               echo "Test commit" >> README.md
               git commit -am "Test commit for invalid tag format"
               set_github_env "invalid_tag" \$(git rev-parse HEAD)
-              run_script
+              if run_script; then
+                  echo "Test 'invalid tag format' failed (expected to fail but passed)"
+                  return 1
+              fi
           }
           
           test_tag_not_pointing_to_sha() {
@@ -91,7 +98,10 @@ jobs:
               echo "Test commit 2" >> README.md
               git commit -am "Test commit 2 for tag not pointing to SHA"
               set_github_env "v1.2.4" \$(git rev-parse HEAD)
-              run_script
+              if run_script; then
+                  echo "Test 'tag not pointing to SHA' failed (expected to fail but passed)"
+                  return 1
+              fi
           }
           
           test_sha_not_in_main_or_patch() {
@@ -100,14 +110,29 @@ jobs:
               echo "Feature commit" >> README.md
               git commit -am "Feature commit"
               set_github_env "v1.2.5" \$(git rev-parse HEAD)
-              run_script
+              if run_script; then
+                  echo "Test 'SHA not in main or patch' failed (expected to fail but passed)"
+                  return 1
+              fi
           }
           
           # Run tests
-          test_valid_tag
-          test_invalid_tag_format
-          test_tag_not_pointing_to_sha
-          test_sha_not_in_main_or_patch
+          failed_tests=0
+          
+          run_test() {
+              if ! \$1; then
+                  failed_tests=\$((failed_tests + 1))
+              fi
+          }
+          
+          run_test test_valid_tag
+          run_test test_invalid_tag_format
+          run_test test_tag_not_pointing_to_sha
+          run_test test_sha_not_in_main_or_patch
+          
+          echo "Tests completed. \$failed_tests test(s) failed."
+          
+          exit \$failed_tests
           EOT
           
           chmod +x test_script.sh
