--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,11 +82,11 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: "Docker login"
-        uses: "docker/login-action@v3"
-        with:
-          username: "${{ secrets.DOCKERHUB_USER }}"
-          password: "${{ secrets.DOCKERHUB_PASS }}"
+#      - name: "Docker login"
+#        uses: "docker/login-action@v3"
+#        with:
+#          username: "${{ secrets.DOCKERHUB_USER }}"
+#          password: "${{ secrets.DOCKERHUB_PASS }}"
 
       - name: Set up Syft
         run: curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
