--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,16 +31,16 @@ jobs:
           DOCKER_BUILDX_BUILDER: "${{ steps.buildx.outputs.name }}"
 
       - name: Output full commit sha
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || matches(github.ref, '^refs/heads/patch/v\d+\.\d+\.\d+-\d+$'))
         run: echo "sha_full=$(git rev-parse HEAD)" >> $GITHUB_ENV
 
       - name: Save Docker image tarballs
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || matches(github.ref, '^refs/heads/patch/v\d+\.\d+\.\d+-\d+$'))
         run: |
           scripts/docker-save.sh -t ${{ env.sha_full }} -o /tmp/imgs
 
       - name: Save Docker image tarballs as artifacts
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || matches(github.ref, '^refs/heads/patch/v\d+\.\d+\.\d+-\d+$'))
         uses: actions/upload-artifact@v4
         with:
           name: armada-image-tarballs
