--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,7 +95,23 @@ jobs:
         run: |
           current_tag='${{ github.event.workflow_run.head_branch }}'
           echo "GORELEASER_CURRENT_TAG=$current_tag" >> $GITHUB_ENV
-          previous_tag=$(git -c 'versionsort.suffix=-rc' tag --list --sort=version:refname | grep -Eo '^v[0-9]{1,}.[0-9]{1,}.[0-9]{1,}$' | tail -n 2 | head -n 1)
+
+          # Function to extract base version
+          get_base_version() {
+          echo "$1" | sed -E 's/^v?([0-9]+\.[0-9]+\.[0-9]+).*$/\1/'
+          }
+
+          # Check if current tag is a patch release
+          if [[ $current_tag =~ ^v?[0-9]+\.[0-9]+\.[0-9]+-patch[0-9]+$ ]]; then
+          # For patch releases, find the previous patch or the base version
+          base_version=$(get_base_version "$current_tag")
+          previous_tag=$(git tag --list "v${base_version}*" --sort=-v:refname | grep -v "$current_tag" | head -n1)
+          else
+          # For main releases, find the previous main release
+          previous_tag=$(git tag --list 'v*' --sort=-v:refname | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | grep -v "$current_tag" | head -n1)
+          fi
+
+          echo "GORELEASER_PREVIOUS_TAG=$previous_tag"
           echo "GORELEASER_PREVIOUS_TAG=$previous_tag" >> $GITHUB_ENV
 
       - name: Run GoReleaser
