--- a/.github/workflows/release-rc.yml
+++ b/.github/workflows/release-rc.yml
@@ -31,9 +31,9 @@ jobs:
           ref='${{ github.event.workflow_run.head_branch }}'
           sha='${{ github.event.workflow_run.head_sha }}'
 
-          if [[ "$ref" == "main" ]]; then
-            [ $(git branch --contains=$sha main | wc -l) -eq 1 ] &&
-            [ $(git rev-list --count $sha..main) -le 2 ]
+          if [[ "$ref" == "master" ]]; then
+            [ $(git branch --contains=$sha master | wc -l) -eq 1 ] &&
+            [ $(git rev-list --count $sha..master) -le 2 ]
           elif [[ "$ref" =~ ^patch/v[0-9]+\.[0-9]+\.[0-9]+-[0-9]+$ ]]; then
             [ $(git branch --contains=$sha "$ref" | wc -l) -eq 1 ] &&
             base_tag=${ref#patch/}
@@ -44,7 +44,7 @@ jobs:
           fi
 
           if [ $? -ne 0 ]; then
-            echo "::error ::Invalid ref $ref $sha: must be a merge to main branch (not more than 2 commits away) or a patch branch (not more than 5 commits away from base tag)"
+            echo "::error ::Invalid ref $ref $sha: must be a merge to master branch (not more than 2 commits away) or a patch branch (not more than 5 commits away from base tag)"
             exit 1
           fi
   release:
