--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,9 +47,9 @@ jobs:
           # Fetch all branches to ensure we have the necessary information
           git fetch --all
 
-          # Check if it's from main branch or a patch branch
-          if [ $(git branch -r --contains=$sha | grep -E "origin/(main|patch/v[0-9]+\.[0-9]+\.[0-9]+-[0-9]+)$" | wc -l) -eq 0 ]; then
-            echo "::error::$sha is not in main or any patch branch"
+          # Check if it's from master branch or a patch branch
+          if [ $(git branch -r --contains=$sha | grep -E "origin/(master|patch/v[0-9]+\.[0-9]+\.[0-9]+-[0-9]+)$" | wc -l) -eq 0 ]; then
+            echo "::error::$sha is not in master or any patch branch"
             echo "Branches containing this SHA:"
             git branch -r --contains=$sha
             exit 1
@@ -107,7 +107,7 @@ jobs:
           base_version=$(get_base_version "$current_tag")
           previous_tag=$(git tag --list "v${base_version}*" --sort=-v:refname | grep -v "$current_tag" | head -n1)
           else
-          # For main releases, find the previous main release
+          # For master releases, find the previous master release
           previous_tag=$(git tag --list 'v*' --sort=-v:refname | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | grep -v "$current_tag" | head -n1)
           fi
 
