--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
           echo "Validating ref: $ref, sha: $sha"
 
           # Check if it's a valid tag format
-          if [[ ! $ref =~ ^v[0-9]+\.[0-9]+\.[0-9]+(-[0-9]+)?$ ]]; then
+          if [[ ! $ref =~ ^v[0-9]+\.[0-9]+\.[0-9]+(-patch[0-9]+)?$ ]]; then
             echo "::error::Invalid tag format: $ref"
             exit 1
           fi
