--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -15,4 +15,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Debug
-        run: ${{ github.event.inputs.owner }}
+        run: echo "${{ github.event.inputs.owner }}"
