--- a/.github/workflows/drift-check.yaml
+++ b/.github/workflows/drift-check.yaml
@@ -1,8 +1,9 @@
 name: "Terraform Cloud Drift Check"
 
 on:
-  schedule:
-    - cron: '0 * * * *'
+  workflow_dispatch:
+#  schedule:
+#    - cron: '0 * * * *'
 
 jobs:
   drift-check:
