--- a/.github/workflows/create-fork.yaml
+++ b/.github/workflows/create-fork.yaml
@@ -69,5 +69,5 @@ jobs:
             --field repo_name="${{ steps.parse-upstream.outputs.fork_name }}" \
             --field owner="${{ github.event.inputs.fork_to_org }}" \
             --ref "${{ github.ref_name }}"
-        env:
-          GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+#        env:
+#          GH_TOKEN: ${{ steps.generate-token.outputs.token }}
